--- a/style.css
+++ b/style.css
@@ -542,3 +542,242 @@ align-self: stretch;
 .menuList::-webkit-scrollbar-thumb:hover {
     background: rgba(0, 0, 0, 0.5); /* Darker on hover to indicate interactivity */
 }
+
+@media screen and (max-width : 1120px) {
+    .dessertSection{
+        display: flex;
+        flex-direction: column;
+        gap: 0.25px;
+    }
+}
+
+button{
+    display: flex;
+    width: 132;
+padding: 1rem 2rem;
+justify-content: center;
+align-items: center;
+gap: 0.625rem;
+border-radius: 0.75rem;
+background: var(--Schemes-On-Primary-Container, #370728);
+color: var(--Schemes-Primary-Container, #FFD8EB);
+
+/* material-theme/label/large */
+font-family: poppins;
+font-size: 0.875rem;
+font-style: normal;
+font-weight: 500;
+line-height: 1.25rem; /* 142.857% */
+letter-spacing: 0.00625rem;
+}
+.btnCon{
+   margin-top: 0.5rem;
+   display: flex;
+   justify-content: center;
+}
+
+.platterSection{
+    display: flex;
+flex-direction: column;
+justify-content: flex-end;
+align-items: flex-start;
+gap: 1rem;
+align-self: stretch;
+width: 100%;
+}
+
+.platterTop p{
+    color: #000;
+    text-align: center;
+    font-family: poppins;
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.25rem; /* 100% */
+    letter-spacing: 0.00625rem;
+}
+
+.platterTop{
+    display: flex;
+padding: 0.25rem 0rem;
+justify-content: space-between;
+align-items: center;
+align-self: stretch;
+border-bottom: 1px dashed #000;
+}
+
+.platterButtom p{
+    color: #000;
+
+    /* material-theme/label/large */
+    font-family: poppins;
+    font-size: 0.875rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.25rem; /* 142.857% */
+    letter-spacing: 0.00625rem;
+    flex: 1 0 0;
+}
+
+.platterItem{
+    display: flex;
+min-width: 18rem;
+padding: 0.5rem;
+flex-direction: column;
+align-items: flex-start;
+gap: 0.5rem;
+flex: 1 0 0;
+}
+
+
+
+.pla{
+    width: 100%;
+    display: flex;
+align-items: flex-start;
+align-content: flex-start;
+gap: 1.25rem;
+align-self: stretch;
+flex-wrap: wrap;
+flex-direction: row;
+}
+@media screen and (max-width : 480px) {
+    .platterItem{
+        min-width: 0px;
+        width: 100%;
+    }
+    .pla{
+        flex-direction: column;
+    }
+}
+
+.ourservices{
+    display: flex;
+    padding: 1rem 15.625rem;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.625rem;
+    align-self: stretch; 
+    padding-bottom: 3rem;
+}
+
+.service{
+    display: flex;
+padding: 1rem 0.9375rem;
+flex-direction: column;
+align-items: center;
+gap: 1rem;
+align-self: stretch;
+border-radius: 1.5rem;
+background: var(--Schemes-Primary-Container, #FFD8EB);
+}
+
+.service img{
+    width: 6.25rem;
+    height: 6.32638rem;
+    flex-shrink: 0; 
+}
+
+.service h1{
+    color: #000;
+text-align: center;
+
+/* material-theme/headline/large */
+font-family: poppins;
+font-size: 2rem;
+font-style: normal;
+font-weight: 400;
+line-height: 2.5rem; /* 125% */
+}
+
+.service p{
+    color: var(--Schemes-On-Surface, #211A1D);
+
+/* material-theme/label/large */
+font-family: poppins;
+font-size: 0.875rem;
+font-style: normal;
+font-weight: 300;
+line-height: 1.25rem; /* 142.857% */
+letter-spacing: 0.00625rem;
+align-self: stretch;
+}
+
+@media screen and (max-width : 1120px) {
+   .ourservices{
+     padding: 1rem 1rem;
+   }
+  
+}
+@media screen and (max-width : 480px) {
+   .ourservices{
+     padding: 1rem 1rem;
+   }
+}
+
+.ourboss{
+    
+    width: 18.75rem;
+height: 18.75rem;
+border-radius: 25rem;
+background: linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), url
+}
+
+footer{
+    display: flex;
+    padding: 1.5rem 0rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    align-self: stretch; 
+    background: var(--Schemes-Primary, #864B6E);
+}
+
+.footerlogo{
+    width: 4.375rem;
+    height: 4.42844rem;
+    flex-shrink: 0;
+}
+
+footer div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;  
+}
+
+footer p {
+    color: #FFF;
+
+/* material-theme/label/large */
+font-family: poppins;
+font-size: 0.875rem;
+font-style: normal;
+font-weight: 500;
+line-height: 1.25rem; /* 142.857% */
+letter-spacing: 0.00625rem;
+}
+
+.whatsapp-float {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    bottom: 20px; /* Distance from the bottom */
+    right: 20px; /* Distance from the right */
+    z-index: 1000; /* Ensures it stays on top */
+    background-color: #25D366; /* WhatsApp green color */
+    border-radius: 50%;
+    text-align: center;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.whatsapp-float img {
+    width: 100%;
+    height: auto;
+    padding: 5px; /* Optional padding */
+}
+
+.whatsapp-float:hover {
+    background-color: #128C7E; /* Darker green on hover */
+}
